problems solved
